--- a/docs/components/switch.html
+++ b/docs/components/switch.html
@@ -17,7 +17,7 @@
     <div>Default</div>
     <div class="example">
       <div class="preview">
-        <ui-switch id="switch"></ui-switch>
+        <ui-switch id="a"></ui-switch>
       </div>
       <div class="toolbar">
         <span>HTML</span>
