--- a/docs/components/textarea.html
+++ b/docs/components/textarea.html
@@ -116,7 +116,7 @@
 
 <pre><code>
 &lt;ui-textarea placeholder="Disabled"&gt;
-  &lt;textarea disabled&gt;Disabled&lt;/textarea&gt;
+  &lt;textarea disabled&gt;&lt;/textarea&gt;
 &lt;/ui-textarea&gt;
 </code></pre>
 
