--- a/ui/styles/typography.css
+++ b/ui/styles/typography.css
@@ -5,6 +5,7 @@
   --font-family-code:ui-monospace,Menlo,Consolas,monospace;
 
   /* font weight */
+  --font-weight-light:300;
   --font-weight-normal:400;
   --font-weight-medium:500;
   --font-weight-semibold:600;
@@ -29,12 +30,6 @@
   --line-height-condensed:1.2;
   --line-height-normal:1.5;
   --line-height-expanded:2;
-
-  /* text align */
-  --text-align-start:start;
-  --text-align-end:end;
-  --text-align-center:center;
-  --text-align-justify:justify;
 }
 
 /* body */
